docs(tarko): restructure cli documentation into separate sections (#1610)

--- a/multimodal/websites/tarko/docs/en/guide/deployment/cli.mdx
+++ b/multimodal/websites/tarko/docs/en/guide/deployment/cli.mdx
@@ -1,313 +1,441 @@
 ---
 title: CLI Deployment
-description: Deploy Tarko Agents using the CLI
+description: Production deployment strategies using Tarko CLI
 ---
 
 # CLI Deployment
 
-The **Tarko Agent CLI** provides a simple way to deploy and run Tarko-based Agents in various environments. Use `tarko run [agent]` to create headless or headful Agent runtime environments.
+This guide covers production deployment strategies using the Tarko CLI. For complete CLI reference and commands, see the [CLI Guide](/guide/cli/overview).
 
-## Installation
+## Overview
 
-Install the Tarko CLI globally:
+Tarko CLI provides multiple deployment modes optimized for different environments:
 
-```bash
-npm install -g @tarko/agent-cli
-```
+- **Production Server** (`tarko serve`) - Headless API server for production
+- **Development** (`tarko run`) - Interactive UI for development and testing
+- **Automation** (`tarko run --headless`) - Scripting and CI/CD integration
 
-Or use with npx:
+For detailed command reference, see [CLI Commands](/guide/cli/commands).
 
-```bash
-npx @tarko/agent-cli run my-agent
-```
+## Production Server Deployment
 
-## Basic Usage
+### Basic Server Setup
 
-### Run an Agent
+Deploy a headless API server for production use:
 
 ```bash
-# Run agent in current directory
-tarko run
+# Start production server
+tarko serve --port 8080 --host 0.0.0.0
 
-# Run specific agent
-tarko run ./my-agent
+# With specific agent
+tarko serve agent-tars --port 8080
 
-# Run with custom configuration
-tarko run --config ./custom-config.json
+# With production configuration
+tarko serve --config production.config.ts --port 8080
 ```
 
-### Development Mode
+The server exposes REST and WebSocket APIs at:
+- `GET /api/v1/health` - Health check
+- `POST /api/v1/chat` - Chat endpoint
+- `GET /api/v1/events` - Event stream (WebSocket)
 
-```bash
-# Run in development mode with hot reload
-tarko run --dev
+### Production Configuration
 
-# Run with debug logging
-tarko run --debug
+Create a production-optimized configuration:
 
-# Run with specific port
-tarko run --port 3001
-```
+```typescript
+// production.config.ts
+import { AgentAppConfig } from '@tarko/interface';
 
-## Configuration
-
-### CLI Configuration File
-
-Create a `tarko.config.js` file:
-
-```javascript
-module.exports = {
-  name: 'MyAgent',
-  description: 'A helpful assistant',
-  
-  // Runtime configuration
-  runtime: {
-    port: 3000,
-    host: '0.0.0.0',
-    mode: 'production' // or 'development'
-  },
-  
-  // Model configuration
+const config: AgentAppConfig = {
   model: {
     provider: 'openai',
+    id: 'gpt-4',
     apiKey: process.env.OPENAI_API_KEY,
-    model: 'gpt-4'
   },
   
-  // Tools
-  tools: [
-    '@tarko/tools/file-system',
-    '@tarko/tools/browser',
-    './custom-tools/weather'
-  ],
-  
-  // UI configuration
-  ui: {
-    enabled: true,
-    theme: 'default',
-    title: 'My Agent'
-  }
-};
-```
-
-### Environment Variables
-
-```bash
-# Model configuration
-export TARKO_MODEL_PROVIDER=openai
-export TARKO_MODEL_API_KEY=your-api-key
-export TARKO_MODEL_NAME=gpt-4
-
-# Runtime configuration
-export TARKO_PORT=3000
-export TARKO_HOST=0.0.0.0
-export TARKO_MODE=production
-
-# UI configuration
-export TARKO_UI_ENABLED=true
-export TARKO_UI_THEME=default
-```
-
-## Deployment Modes
-
-### Headless Mode
-
-Run without UI for API-only access:
-
-```bash
-tarko run --headless
-```
-
-Configuration:
-
-```javascript
-module.exports = {
-  runtime: {
-    mode: 'headless',
-    api: {
-      enabled: true,
-      cors: true,
-      rateLimit: {
-        windowMs: 15 * 60 * 1000, // 15 minutes
-        max: 100 // limit each IP to 100 requests per windowMs
-      }
-    }
+  server: {
+    port: 8080,
+    host: '0.0.0.0',
+    cors: true,
+    rateLimit: {
+      windowMs: 15 * 60 * 1000, // 15 minutes
+      max: 100, // requests per window
+    },
   },
+  
   ui: {
-    enabled: false
-  }
-};
-```
-
-### Headful Mode
-
-Run with web UI:
-
-```bash
-tarko run --ui
-```
-
-Configuration:
-
-```javascript
-module.exports = {
-  ui: {
+    enabled: false, // Disable UI for production
+  },
+  
+  logging: {
+    level: 'info',
+    format: 'json',
+    output: {
+      console: false,
+      file: {
+        enabled: true,
+        path: './logs/agent.log',
+        maxSize: '100m',
+        maxFiles: 10,
+      },
+    },
+  },
+  
+  metrics: {
     enabled: true,
-    title: 'My Agent',
-    theme: 'default',
-    customization: {
-      logo: './assets/logo.png',
-      primaryColor: '#007bff',
-      layout: 'sidebar' // or 'topbar'
-    }
-  }
+    endpoint: '/metrics',
+  },
 };
+
+export default config;
 ```
 
-## Production Deployment
+For complete configuration options, see [CLI Configuration](/guide/cli/configuration).
+
+## Container Deployment
 
 ### Docker
 
-Create a `Dockerfile`:
+Create a production Docker image:
 
 ```dockerfile
+# Dockerfile
 FROM node:18-alpine
 
 WORKDIR /app
 
-# Copy package files
+# Install dependencies
 COPY package*.json ./
 RUN npm ci --only=production
 
-# Copy agent code
+# Copy application code
 COPY . .
 
-# Install Tarko CLI
+# Install Tarko CLI globally
 RUN npm install -g @tarko/agent-cli
 
-EXPOSE 3000
+# Create non-root user
+RUN addgroup -g 1001 -S tarko && \
+    adduser -S tarko -u 1001
+USER tarko
 
-CMD ["tarko", "run", "--port", "3000", "--host", "0.0.0.0"]
+# Expose port
+EXPOSE 8080
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+  CMD curl -f http://localhost:8080/api/v1/health || exit 1
+
+# Start server
+CMD ["tarko", "serve", "--port", "8080", "--host", "0.0.0.0"]
 ```
 
 Build and run:
 
 ```bash
-docker build -t my-agent .
-docker run -p 3000:3000 -e OPENAI_API_KEY=your-key my-agent
+# Build image
+docker build -t my-agent:latest .
+
+# Run container
+docker run -d \
+  --name my-agent \
+  -p 8080:8080 \
+  -e OPENAI_API_KEY=${OPENAI_API_KEY} \
+  -v $(pwd)/logs:/app/logs \
+  --restart unless-stopped \
+  my-agent:latest
+
+# Check health
+docker exec my-agent curl -f http://localhost:8080/api/v1/health
 ```
 
 ### Docker Compose
 
+For multi-service deployments:
+
 ```yaml
+# docker-compose.yml
 version: '3.8'
 
 services:
   agent:
     build: .
     ports:
-      - "3000:3000"
+      - "8080:8080"
     environment:
-      - TARKO_MODEL_PROVIDER=openai
-      - TARKO_MODEL_API_KEY=${OPENAI_API_KEY}
-      - TARKO_MODEL_NAME=gpt-4
-      - TARKO_MODE=production
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - NODE_ENV=production
     volumes:
-      - ./data:/app/data
+      - ./workspace:/app/workspace
+      - ./logs:/app/logs
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/api/v1/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+    depends_on:
+      - redis
 
   redis:
-    image: redis:alpine
+    image: redis:7-alpine
     ports:
       - "6379:6379"
     volumes:
       - redis_data:/data
+    restart: unless-stopped
+    command: redis-server --appendonly yes
+
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./ssl:/etc/nginx/ssl:ro
+    depends_on:
+      - agent
     restart: unless-stopped
 
 volumes:
   redis_data:
 ```
 
-### Process Manager (PM2)
+Deploy the stack:
+
+```bash
+# Start services
+docker-compose up -d
+
+# View logs
+docker-compose logs -f agent
+
+# Scale agents
+docker-compose up -d --scale agent=3
+
+# Health check
+curl -f http://localhost:8080/api/v1/health
+```
+
+## Kubernetes Deployment
+
+### Basic Deployment
+
+```yaml
+# k8s/deployment.yaml
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: tarko-agent
+  labels:
+    app: tarko-agent
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: tarko-agent
+  template:
+    metadata:
+      labels:
+        app: tarko-agent
+    spec:
+      containers:
+      - name: agent
+        image: my-agent:latest
+        ports:
+        - containerPort: 8080
+        env:
+        - name: OPENAI_API_KEY
+          valueFrom:
+            secretKeyRef:
+              name: api-secrets
+              key: openai-key
+        - name: NODE_ENV
+          value: "production"
+        resources:
+          requests:
+            memory: "256Mi"
+            cpu: "250m"
+          limits:
+            memory: "512Mi"
+            cpu: "500m"
+        livenessProbe:
+          httpGet:
+            path: /api/v1/health
+            port: 8080
+          initialDelaySeconds: 30
+          periodSeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /api/v1/health
+            port: 8080
+          initialDelaySeconds: 5
+          periodSeconds: 5
+        volumeMounts:
+        - name: workspace
+          mountPath: /app/workspace
+        - name: logs
+          mountPath: /app/logs
+      volumes:
+      - name: workspace
+        persistentVolumeClaim:
+          claimName: agent-workspace
+      - name: logs
+        persistentVolumeClaim:
+          claimName: agent-logs
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: tarko-agent-service
+spec:
+  selector:
+    app: tarko-agent
+  ports:
+  - protocol: TCP
+    port: 80
+    targetPort: 8080
+  type: ClusterIP
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: tarko-agent-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
+spec:
+  rules:
+  - host: agent.example.com
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: tarko-agent-service
+            port:
+              number: 80
+```
+
+Deploy to Kubernetes:
+
+```bash
+# Create secrets
+kubectl create secret generic api-secrets \
+  --from-literal=openai-key=${OPENAI_API_KEY}
+
+# Apply manifests
+kubectl apply -f k8s/
+
+# Check deployment
+kubectl get pods -l app=tarko-agent
+kubectl logs -l app=tarko-agent
+
+# Port forward for testing
+kubectl port-forward svc/tarko-agent-service 8080:80
+```
+
+## Process Management
+
+### PM2
+
+For traditional server deployments:
 
 ```javascript
 // ecosystem.config.js
 module.exports = {
   apps: [{
-    name: 'my-agent',
+    name: 'tarko-agent',
     script: 'tarko',
-    args: 'run --port 3000',
-    instances: 1,
+    args: 'serve --port 8080 --config production.config.ts',
+    instances: 'max', // Use all CPU cores
+    exec_mode: 'cluster',
     autorestart: true,
     watch: false,
     max_memory_restart: '1G',
     env: {
       NODE_ENV: 'production',
-      TARKO_MODEL_PROVIDER: 'openai',
-      TARKO_MODEL_API_KEY: process.env.OPENAI_API_KEY
-    }
+      OPENAI_API_KEY: process.env.OPENAI_API_KEY,
+    },
+    error_file: './logs/err.log',
+    out_file: './logs/out.log',
+    log_file: './logs/combined.log',
+    time: true,
   }]
 };
 ```
 
-Deploy:
+Deploy with PM2:
 
 ```bash
+# Install PM2
 npm install -g pm2
+
+# Start application
 pm2 start ecosystem.config.js
+
+# Save PM2 configuration
 pm2 save
+
+# Setup startup script
 pm2 startup
+sudo env PATH=$PATH:/usr/bin pm2 startup systemd -u $USER --hp $HOME
+
+# Monitor
+pm2 monit
+pm2 logs tarko-agent
+
+# Restart
+pm2 restart tarko-agent
+
+# Stop
+pm2 stop tarko-agent
 ```
 
-## Monitoring and Logging
+### Systemd Service
 
-### Health Checks
+Create a systemd service:
+
+```ini
+# /etc/systemd/system/tarko-agent.service
+[Unit]
+Description=Tarko Agent Server
+After=network.target
+
+[Service]
+Type=simple
+User=tarko
+WorkingDirectory=/opt/tarko-agent
+Environment=NODE_ENV=production
+Environment=OPENAI_API_KEY=your-api-key
+ExecStart=/usr/bin/tarko serve --port 8080 --config production.config.ts
+Restart=always
+RestartSec=10
+StandardOutput=journal
+StandardError=journal
+
+[Install]
+WantedBy=multi-user.target
+```
+
+Manage the service:
 
 ```bash
-# Check agent status
-curl http://localhost:3000/health
+# Enable and start
+sudo systemctl enable tarko-agent
+sudo systemctl start tarko-agent
 
-# Check detailed status
-curl http://localhost:3000/status
-```
+# Check status
+sudo systemctl status tarko-agent
 
-### Logging Configuration
+# View logs
+sudo journalctl -u tarko-agent -f
 
-```javascript
-module.exports = {
-  logging: {
-    level: 'info', // debug, info, warn, error
-    format: 'json', // json, text
-    output: {
-      console: true,
-      file: {
-        enabled: true,
-        path: './logs/agent.log',
-        maxSize: '10m',
-        maxFiles: 5
-      }
-    }
-  }
-};
-```
-
-### Metrics
-
-Enable metrics collection:
-
-```javascript
-module.exports = {
-  metrics: {
-    enabled: true,
-    endpoint: '/metrics',
-    collectors: {
-      requests: true,
-      responses: true,
-      toolCalls: true,
-      errors: true
-    }
-  }
-};
+# Restart
+sudo systemctl restart tarko-agent
 ```
 
 ## Load Balancing
@@ -315,15 +443,36 @@ module.exports = {
 ### Nginx Configuration
 
 ```nginx
+# nginx.conf
 upstream tarko_agents {
-    server localhost:3000;
-    server localhost:3001;
-    server localhost:3002;
+    least_conn;
+    server localhost:8080 max_fails=3 fail_timeout=30s;
+    server localhost:8081 max_fails=3 fail_timeout=30s;
+    server localhost:8082 max_fails=3 fail_timeout=30s;
 }
 
 server {
     listen 80;
-    server_name my-agent.example.com;
+    server_name agent.example.com;
+    
+    # Redirect HTTP to HTTPS
+    return 301 https://$server_name$request_uri;
+}
+
+server {
+    listen 443 ssl http2;
+    server_name agent.example.com;
+    
+    # SSL configuration
+    ssl_certificate /etc/nginx/ssl/cert.pem;
+    ssl_certificate_key /etc/nginx/ssl/key.pem;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    
+    # Security headers
+    add_header X-Frame-Options DENY;
+    add_header X-Content-Type-Options nosniff;
+    add_header X-XSS-Protection "1; mode=block";
     
     location / {
         proxy_pass http://tarko_agents;
@@ -335,7 +484,204 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
+        proxy_read_timeout 86400;
+        
+        # Rate limiting
+        limit_req zone=api burst=20 nodelay;
     }
+    
+    # Health check endpoint
+    location /health {
+        access_log off;
+        proxy_pass http://tarko_agents/api/v1/health;
+    }
+    
+    # Metrics endpoint (restrict access)
+    location /metrics {
+        allow 10.0.0.0/8;
+        deny all;
+        proxy_pass http://tarko_agents/metrics;
+    }
+}
+
+# Rate limiting
+http {
+    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
+}
+```
+
+## Monitoring and Observability
+
+### Health Checks
+
+```bash
+# Basic health check
+curl -f http://localhost:8080/api/v1/health
+
+# Detailed status
+curl http://localhost:8080/api/v1/status
+
+# Metrics (Prometheus format)
+curl http://localhost:8080/metrics
+```
+
+### Logging
+
+Configure structured logging for production:
+
+```typescript
+// In production.config.ts
+logging: {
+  level: 'info',
+  format: 'json',
+  output: {
+    console: false,
+    file: {
+      enabled: true,
+      path: './logs/agent.log',
+      maxSize: '100m',
+      maxFiles: 10,
+    },
+  },
+}
+```
+
+Log aggregation with ELK stack or similar:
+
+```yaml
+# docker-compose.override.yml
+version: '3.8'
+services:
+  agent:
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+        labels: "service=tarko-agent"
+```
+
+### Metrics and Alerting
+
+Enable Prometheus metrics:
+
+```typescript
+// In production.config.ts
+metrics: {
+  enabled: true,
+  endpoint: '/metrics',
+  collectors: {
+    requests: true,
+    responses: true,
+    toolCalls: true,
+    errors: true,
+    memory: true,
+    cpu: true,
+  },
+}
+```
+
+## CI/CD Integration
+
+### GitHub Actions
+
+```yaml
+# .github/workflows/deploy.yml
+name: Deploy Agent
+
+on:
+  push:
+    branches: [main]
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v3
+    
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
+        cache: 'npm'
+    
+    - name: Install dependencies
+      run: npm ci
+    
+    - name: Install Tarko CLI
+      run: npm install -g @tarko/agent-cli
+    
+    - name: Test agent
+      run: |
+        tarko run --headless --input "Health check" --format json
+      env:
+        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+    
+    - name: Build Docker image
+      run: |
+        docker build -t my-agent:${{ github.sha }} .
+        docker tag my-agent:${{ github.sha }} my-agent:latest
+    
+    - name: Deploy to production
+      run: |
+        # Deploy to your infrastructure
+        echo "Deploying to production..."
+```
+
+### Deployment Scripts
+
+```bash
+#!/bin/bash
+# deploy.sh
+
+set -e
+
+echo "Deploying Tarko Agent..."
+
+# Build and push image
+docker build -t my-agent:latest .
+docker push my-agent:latest
+
+# Update Kubernetes deployment
+kubectl set image deployment/tarko-agent agent=my-agent:latest
+kubectl rollout status deployment/tarko-agent
+
+# Verify deployment
+kubectl get pods -l app=tarko-agent
+echo "Deployment complete!"
+```
+
+## Security Considerations
+
+### Environment Variables
+
+```bash
+# Use secure environment variable management
+export OPENAI_API_KEY=$(cat /run/secrets/openai_key)
+export ANTHROPIC_API_KEY=$(cat /run/secrets/anthropic_key)
+
+# Or use container secrets
+docker run -d \
+  --secret openai_key \
+  --secret anthropic_key \
+  my-agent:latest
+```
+
+### Network Security
+
+```typescript
+// Restrict tool access in production
+tool: {
+  exclude: ['dangerous_*', 'system_*', 'network_*'],
+},
+
+// Enable CORS only for trusted domains
+server: {
+  cors: {
+    origin: ['https://trusted-domain.com'],
+    credentials: true,
+  },
 }
 ```
 
@@ -343,42 +689,49 @@ server {
 
 ### Common Issues
 
-**Port already in use:**
+**Port conflicts:**
 ```bash
-# Find process using port
-lsof -i :3000
+# Check port usage
+lsof -i :8080
 
-# Kill process
-kill -9 <PID>
-
-# Or use different port
-tarko run --port 3001
-```
-
-**Permission errors:**
-```bash
-# Run with sudo (not recommended)
-sudo tarko run
-
-# Or change port to non-privileged
-tarko run --port 8080
+# Use different port
+tarko serve --port 8081
 ```
 
 **Memory issues:**
 ```bash
-# Increase Node.js memory limit
-NODE_OPTIONS="--max-old-space-size=4096" tarko run
+# Increase Node.js memory
+NODE_OPTIONS="--max-old-space-size=4096" tarko serve
+
+# Monitor memory usage
+top -p $(pgrep -f "tarko serve")
+```
+
+**Configuration errors:**
+```bash
+# Validate configuration
+tarko --show-config --dry-run
+
+# Debug configuration loading
+DEBUG=tarko:config tarko serve --debug
 ```
 
 ### Debug Mode
 
 ```bash
 # Enable debug logging
-DEBUG=tarko:* tarko run --debug
+DEBUG=tarko:* tarko serve --debug
 
-# Enable Node.js inspector
-tarko run --inspect
+# Monitor with verbose output
+tarko serve --debug --verbose
 
-# Enable verbose output
-tarko run --verbose
+# Performance profiling
+NODE_OPTIONS="--inspect" tarko serve
 ```
+
+## Next Steps
+
+- [CLI Overview](/guide/cli/overview) - Complete CLI reference
+- [CLI Configuration](/guide/cli/configuration) - Advanced configuration
+- [Built-in Agents](/guide/cli/built-in-agents) - Using pre-built agents
+- [Server API](/guide/deployment/server) - Server API reference
